[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://UI/Menu.png" type="Texture" id=2]
[ext_resource path="res://UI/Play1.png" type="Texture" id=3]
[ext_resource path="res://UI/Play2.png" type="Texture" id=4]
[ext_resource path="res://UI/Credits1.png" type="Texture" id=5]
[ext_resource path="res://UI/Credits2.png" type="Texture" id=6]
[ext_resource path="res://UI/Quit1.png" type="Texture" id=7]
[ext_resource path="res://UI/Quit2.png" type="Texture" id=8]
[ext_resource path="res://UI/GameOverScreen.png" type="Texture" id=9]
[ext_resource path="res://UI/BacktoMenu1.png" type="Texture" id=10]
[ext_resource path="res://UI/BacktoMenu2.png" type="Texture" id=11]
[ext_resource path="res://UI/CreditsPlaceholder.png" type="Texture" id=12]
[ext_resource path="res://UI/Back1.png" type="Texture" id=13]
[ext_resource path="res://UI/Back2.png" type="Texture" id=14]

[node name="Menu" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="MainMenu" type="MarginContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 15.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Margin", "Rect" ]

[node name="TextureRect" type="TextureRect" parent="MainMenu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 1039.0
margin_bottom = 690.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="HBoxes" type="HBoxContainer" parent="MainMenu" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 1039.0
margin_bottom = 690.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu/HBoxes" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 247.0
margin_bottom = 690.0
rect_min_size = Vector2( 247, 0 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="HBoxContainer2" type="HBoxContainer" parent="MainMenu/HBoxes" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 251.0
margin_right = 780.0
margin_bottom = 690.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/HBoxes/HBoxContainer2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 529.0
margin_bottom = 690.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Teto" type="VBoxContainer" parent="MainMenu/HBoxes/HBoxContainer2/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 300 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
alignment = 0
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Buttons" type="VBoxContainer" parent="MainMenu/HBoxes/HBoxContainer2/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 304.0
margin_right = 529.0
margin_bottom = 547.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 6
alignment = 0
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Size Flags", "custom_constants" ]

[node name="Play" type="TextureButton" parent="MainMenu/HBoxes/HBoxContainer2/VBoxContainer/Buttons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 529.0
margin_bottom = 77.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_focused = ExtResource( 4 )
_sections_unfolded = [ "Rect", "Size Flags", "Textures" ]

[node name="Credits" type="TextureButton" parent="MainMenu/HBoxes/HBoxContainer2/VBoxContainer/Buttons" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 83.0
margin_right = 529.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
texture_focused = ExtResource( 6 )
_sections_unfolded = [ "Rect", "Size Flags", "Textures" ]

[node name="Quit" type="TextureButton" parent="MainMenu/HBoxes/HBoxContainer2/VBoxContainer/Buttons" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 166.0
margin_right = 529.0
margin_bottom = 243.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )
texture_focused = ExtResource( 8 )
_sections_unfolded = [ "Size Flags", "Textures" ]

[node name="VBoxContainer2" type="VBoxContainer" parent="MainMenu/HBoxes/HBoxContainer2/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 551.0
margin_right = 529.0
margin_bottom = 690.0
rect_min_size = Vector2( 0, 139 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="HBoxContainer3" type="HBoxContainer" parent="MainMenu/HBoxes" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 784.0
margin_right = 1031.0
margin_bottom = 690.0
rect_min_size = Vector2( 247, 0 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="GameOver" type="MarginContainer" parent="." index="1"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 15.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Margin", "Rect" ]

[node name="TextureRect" type="TextureRect" parent="GameOver" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 1039.0
margin_bottom = 724.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 9 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="HBoxes" type="HBoxContainer" parent="GameOver" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 1039.0
margin_bottom = 724.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="HBoxContainer" type="HBoxContainer" parent="GameOver/HBoxes" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 247.0
margin_bottom = 724.0
rect_min_size = Vector2( 247, 0 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="HBoxContainer2" type="HBoxContainer" parent="GameOver/HBoxes" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 251.0
margin_right = 780.0
margin_bottom = 724.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver/HBoxes/HBoxContainer2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 529.0
margin_bottom = 724.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Teto" type="VBoxContainer" parent="GameOver/HBoxes/HBoxContainer2/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 500 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
alignment = 0
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Buttons" type="VBoxContainer" parent="GameOver/HBoxes/HBoxContainer2/VBoxContainer" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 504.0
margin_right = 529.0
margin_bottom = 581.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 6
alignment = 0
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Size Flags", "custom_constants" ]

[node name="BackToMenu" type="TextureButton" parent="GameOver/HBoxes/HBoxContainer2/VBoxContainer/Buttons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 529.0
margin_bottom = 77.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 11 )
texture_focused = ExtResource( 11 )
_sections_unfolded = [ "Textures" ]

[node name="VBoxContainer2" type="VBoxContainer" parent="GameOver/HBoxes/HBoxContainer2/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 585.0
margin_right = 529.0
margin_bottom = 724.0
rect_min_size = Vector2( 0, 139 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="HBoxContainer3" type="HBoxContainer" parent="GameOver/HBoxes" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 784.0
margin_right = 1031.0
margin_bottom = 724.0
rect_min_size = Vector2( 247, 0 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="Credits" type="MarginContainer" parent="." index="2"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 15.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Margin", "Rect" ]

[node name="TextureRect" type="TextureRect" parent="Credits" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 1039.0
margin_bottom = 724.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 12 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="HBoxes" type="HBoxContainer" parent="Credits" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 1039.0
margin_bottom = 724.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="HBoxContainer" type="HBoxContainer" parent="Credits/HBoxes" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 247.0
margin_bottom = 724.0
rect_min_size = Vector2( 247, 0 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="HBoxContainer2" type="HBoxContainer" parent="Credits/HBoxes" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 251.0
margin_right = 780.0
margin_bottom = 724.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="VBoxContainer" type="VBoxContainer" parent="Credits/HBoxes/HBoxContainer2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 529.0
margin_bottom = 724.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Teto" type="VBoxContainer" parent="Credits/HBoxes/HBoxContainer2/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 500 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
alignment = 0
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="Buttons" type="VBoxContainer" parent="Credits/HBoxes/HBoxContainer2/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 504.0
margin_right = 529.0
margin_bottom = 581.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 6
alignment = 0
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Size Flags", "custom_constants" ]

[node name="BackToMenu" type="TextureButton" parent="Credits/HBoxes/HBoxContainer2/VBoxContainer/Buttons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 529.0
margin_bottom = 77.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 14 )
texture_focused = ExtResource( 14 )
_sections_unfolded = [ "Textures" ]

[node name="VBoxContainer2" type="VBoxContainer" parent="Credits/HBoxes/HBoxContainer2/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 585.0
margin_right = 529.0
margin_bottom = 724.0
rect_min_size = Vector2( 0, 139 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="HBoxContainer3" type="HBoxContainer" parent="Credits/HBoxes" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 784.0
margin_right = 1031.0
margin_bottom = 724.0
rect_min_size = Vector2( 247, 0 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[connection signal="button_up" from="MainMenu/HBoxes/HBoxContainer2/VBoxContainer/Buttons/Play" to="." method="call_start_game"]

[connection signal="button_up" from="MainMenu/HBoxes/HBoxContainer2/VBoxContainer/Buttons/Credits" to="." method="show_credits"]

[connection signal="button_up" from="MainMenu/HBoxes/HBoxContainer2/VBoxContainer/Buttons/Quit" to="." method="quit_game"]

[connection signal="button_up" from="GameOver/HBoxes/HBoxContainer2/VBoxContainer/Buttons/BackToMenu" to="." method="hide_game_over"]

[connection signal="button_up" from="Credits/HBoxes/HBoxContainer2/VBoxContainer/Buttons/BackToMenu" to="." method="hide_credits"]


